--- a/en.html
+++ b/en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,23 +6,9 @@
     <title>Yeleen — Full Stack Developer</title>
     <meta
       name="description"
-      content="Yeleen's portfolio: projects, skills, CV and contact."
+      content="Yeleen's portfolio: projects, skills, resume and contact."
     />
     <link rel="stylesheet" href="css/style.css" />
-    <a class="lang" href="index.html" lang="fr" aria-label="Passer en français"
-      >FR</a
-    >
-    <a
-      class="lang"
-      href="en.html"
-      lang="en"
-      aria-label="Switch to English"
-      aria-current="page"
-      >EN</a
-    >
-    <a class="lang" href="it.html" lang="it" aria-label="Passa all’italiano"
-      >IT</a
-    >
   </head>
 
   <body>
@@ -69,7 +55,7 @@
             class="lang"
             href="it.html"
             lang="it"
-            aria-label="Passa all’italiano"
+            aria-label="Switch to Italian"
             >IT</a
           >
         </nav>
@@ -84,7 +70,7 @@
             <p class="kicker">WEB DEVELOPMENT • CLOUD & DEVOPS</p>
 
             <h1 class="hero__title">
-              Hi, I'm <span class="accent">Yeleen</span>
+              Hi, I’m <span class="accent">Yeleen</span>
             </h1>
 
             <p class="hero__subtitle" id="heroType">Welcome to my portfolio</p>
@@ -96,7 +82,7 @@
             </p>
 
             <div class="hero__badges">
-              <span class="badge">Bachelor (Year 2) Computer Science</span>
+              <span class="badge">BUT 2 Computer Science</span>
               <span class="badge">Web • Laravel</span>
               <span class="badge">Cloud • DevOps</span>
             </div>
@@ -137,26 +123,26 @@
           <div class="about__content">
             <div class="about__text">
               <p class="reveal">
-                Computer science student <strong>(Bachelor – Year 2)</strong>,
+                I’m a <strong>Computer Science student (BUT 2)</strong>,
                 specializing in <strong>web development</strong> and
-                <strong>cloud technologies</strong>.
+                <strong>cloud</strong> technologies.
               </p>
 
               <p class="reveal">
                 I build <strong>structured web applications</strong> (MVC
-                architecture, databases) and explore <strong>Linux</strong>,
-                <strong>DevOps</strong>, and cloud services such as
-                <strong>AWS</strong>.
+                architecture, databases) and I’m exploring
+                <strong>Linux</strong>, <strong>DevOps</strong>, and cloud
+                services like <strong>AWS</strong>.
               </p>
 
               <p class="reveal">
                 My experience in <strong>teamwork</strong>, organization, and
-                client relations helped me develop <strong>autonomy</strong>,
+                customer relations helped me develop <strong>autonomy</strong>,
                 <strong>rigor</strong>, and <strong>efficiency</strong>.
               </p>
 
               <div class="about__chips reveal" aria-label="Keywords">
-                <span class="chip">Bachelor Year 2</span>
+                <span class="chip">BUT 2</span>
                 <span class="chip">Laravel (MVC)</span>
                 <span class="chip">AWS</span>
                 <span class="chip">Docker</span>
@@ -165,7 +151,7 @@
               </div>
             </div>
 
-            <!-- DETAILS -->
+            <!-- Details BELOW (2 columns desktop) -->
             <div class="about__details">
               <div class="about__status reveal">
                 <h3>Availability</h3>
@@ -195,7 +181,7 @@
                 <h3>Goals</h3>
                 <ul>
                   <li>Apprenticeship in development / cloud (DevOps)</li>
-                  <li>Growth through real-world projects</li>
+                  <li>Progress on real-world projects</li>
                   <li>Collaboration & best practices</li>
                 </ul>
               </div>
@@ -208,7 +194,7 @@
       <section id="projects" class="section reveal">
         <div class="container container--wide">
           <h2>Projects</h2>
-          <p class="lead">Click on a project to view it fullscreen.</p>
+          <p class="lead">Click a project to open it in full view.</p>
 
           <div class="filters" aria-label="Filter projects">
             <button
@@ -219,6 +205,7 @@
             >
               All
             </button>
+
             <button
               class="filter-btn"
               type="button"
@@ -227,6 +214,7 @@
             >
               Frontend
             </button>
+
             <button
               class="filter-btn"
               type="button"
@@ -234,6 +222,24 @@
               aria-pressed="false"
             >
               Backend
+            </button>
+
+            <button
+              class="filter-btn"
+              type="button"
+              data-filter="laravel"
+              aria-pressed="false"
+            >
+              Networking
+            </button>
+
+            <button
+              class="filter-btn"
+              type="button"
+              data-filter="laravel"
+              aria-pressed="false"
+            >
+              SQL
             </button>
           </div>
 
@@ -264,18 +270,15 @@
             <div
               class="netflix__track"
               tabindex="0"
-              aria-label="Project video carousel"
+              aria-label="Project videos carousel"
             >
               <figure class="netflix__item" tabindex="0" data-tech="frontend">
-                <video
+                <iframe
                   class="netflix__video"
-                  src="assets/video/quizz-demo.mp4"
-                  muted
-                  autoplay
-                  loop
-                  playsinline
-                  preload="metadata"
-                ></video>
+                  src="https://www.youtube.com/embed/vIYNVauNrvQ"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
 
                 <figcaption class="netflix__caption">
                   <div class="cap__title">Alcohol Quiz (Cocktail Guess)</div>
@@ -291,15 +294,12 @@
               </figure>
 
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
-                <video
+                <iframe
                   class="netflix__video"
-                  src="assets/video/cinehub.mp4"
-                  muted
-                  autoplay
-                  loop
-                  playsinline
-                  preload="metadata"
-                ></video>
+                  src="https://www.youtube.com/embed/RUsx0i2UGxU"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
 
                 <figcaption class="netflix__caption">
                   <div class="cap__title">CineHub — Laravel (MVC)</div>
@@ -315,15 +315,12 @@
               </figure>
 
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
-                <video
+                <iframe
                   class="netflix__video"
-                  src="assets/video/app-web-laravel.mp4"
-                  muted
-                  autoplay
-                  loop
-                  playsinline
-                  preload="metadata"
-                ></video>
+                  src="https://www.youtube.com/embed/_LbCqe5As7g"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
 
                 <figcaption class="netflix__caption">
                   <div class="cap__title">Laravel — Code Marathon 2025</div>
@@ -461,20 +458,6 @@
           <div class="links">
             <a
               class="btn"
-              href="assets/cv/Yeleen_Paola_CIVIDINO_CvFR_2026.pdf"
-              target="_blank"
-              rel="noopener"
-              >View CV (FR)</a
-            >
-            <a
-              class="btn btn--ghost"
-              href="assets/cv/Yeleen_Paola_CIVIDINO_CvFR_2026.pdf"
-              download
-              >Download (FR)</a
-            >
-
-            <a
-              class="btn"
               href="assets/cv/Yeleen_Paola_CIVIDINO_CvEN_2026.pdf"
               target="_blank"
               rel="noopener"
@@ -573,14 +556,33 @@
           ✕
         </button>
 
-        <video
+        <!-- Modal arrows -->
+        <button
+          class="project-modal__nav project-modal__nav--prev"
+          type="button"
+          data-modal-prev
+          aria-label="Previous video"
+        >
+          ‹
+        </button>
+
+        <button
+          class="project-modal__nav project-modal__nav--next"
+          type="button"
+          data-modal-next
+          aria-label="Next video"
+        >
+          ›
+        </button>
+
+        <iframe
           id="projectModalVideo"
           class="project-modal__video"
-          controls
-          playsinline
-          disablepictureinpicture
-          controlslist="nodownload noplaybackrate"
-        ></video>
+          src=""
+          frameborder="0"
+          allow="autoplay; encrypted-media"
+          allowfullscreen
+        ></iframe>
 
         <div class="project-modal__meta">
           <p class="project-modal__title" id="projectModalTitle"></p>
