--- a/index.html
+++ b/index.html
@@ -110,6 +110,34 @@
               </picture>
             </div>
           </aside>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -190,6 +218,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -339,6 +395,34 @@
               </figure>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -450,6 +534,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -473,6 +585,34 @@
               >Télécharger (FR)</a
             >
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -515,15 +655,18 @@
           </div>
 
           <!-- FORM CONNECTED TO FORMSPREE -->
+          <!-- FORM CONNECTED TO FORMSPREE -->
+
+          <!-- FORMSPREE WORKING FORM -->
           <form
             class="form contact-form"
-            id="contactForm"
             action="https://formspree.io/f/xykejqzd"
             method="POST"
-            novalidate
           >
-            <input name="name" placeholder="Nom" required />
+            <input name="name" placeholder="Name" required />
+
             <input name="email" type="email" placeholder="Email" required />
+
             <textarea
               name="message"
               rows="5"
@@ -531,8 +674,15 @@
               required
             ></textarea>
 
-            <button class="btn btn--full" type="submit">Send</button>
-            <p class="form-msg" id="formMsg" aria-live="polite"></p>
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
           </form>
         </div>
       </section>
