--- a/it.html
+++ b/it.html
@@ -109,6 +109,34 @@
               </picture>
             </div>
           </aside>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -190,6 +218,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -344,6 +400,34 @@
               </figure>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -455,6 +539,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -478,6 +590,34 @@
               >Scarica (EN)</a
             >
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -519,30 +659,40 @@
             </div>
           </div>
 
-          <!--  FORM CONNECTED TO FORMSPREE -->
+          <!-- FORM CONNECTED TO FORMSPREE -->
+
+          <!-- FORMSPREE WORKING FORM -->
           <form
             class="form contact-form"
-            id="contactForm"
             action="https://formspree.io/f/xykejqzd"
             method="POST"
-            novalidate
           >
-            <input name="name" placeholder="Nome" required />
+            <input name="name" placeholder="Name" required />
+
             <input name="email" type="email" placeholder="Email" required />
+
             <textarea
               name="message"
               rows="5"
-              placeholder="Messaggio"
+              placeholder="Message"
               required
             ></textarea>
-            <button class="btn btn--full" type="submit">Invia</button>
-            <p class="form-msg" id="formMsg" aria-live="polite"></p>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
           </form>
         </div>
       </section>
     </main>
 
-    <button class="to-top" id="toTop" type="button" aria-label="Torna su">
+    <button class="to-top" id="toTop" type="button" aria-label="Retour en haut">
       ↑
     </button>
 
