--- a/en.html
+++ b/en.html
@@ -108,6 +108,34 @@
               </picture>
             </div>
           </aside>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -187,6 +215,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -336,6 +392,34 @@
               </figure>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -447,6 +531,34 @@
               </div>
             </div>
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -470,6 +582,34 @@
               >Download (EN)</a
             >
           </div>
+
+          <!-- FORMSPREE WORKING FORM -->
+          <form
+            class="form contact-form"
+            action="https://formspree.io/f/xykejqzd"
+            method="POST"
+          >
+            <input name="name" placeholder="Name" required />
+
+            <input name="email" type="email" placeholder="Email" required />
+
+            <textarea
+              name="message"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
+          </form>
         </div>
       </section>
 
@@ -511,30 +651,40 @@
             </div>
           </div>
 
-          <!--  FORM CONNECTED TO FORMSPREE -->
+          <!-- FORM CONNECTED TO FORMSPREE -->
+
+          <!-- FORMSPREE WORKING FORM -->
           <form
             class="form contact-form"
-            id="contactForm"
             action="https://formspree.io/f/xykejqzd"
             method="POST"
-            novalidate
           >
             <input name="name" placeholder="Name" required />
+
             <input name="email" type="email" placeholder="Email" required />
+
             <textarea
               name="message"
               rows="5"
               placeholder="Message"
               required
             ></textarea>
-            <button class="btn btn--full" type="submit">Send</button>
-            <p class="form-msg" id="formMsg" aria-live="polite"></p>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="New message from portfolio"
+            />
+
+            <input type="hidden" name="_captcha" value="false" />
+
+            <button class="btn btn--full" type="submit">Send message</button>
           </form>
         </div>
       </section>
     </main>
 
-    <button class="to-top" id="toTop" type="button" aria-label="Back to top">
+    <button class="to-top" id="toTop" type="button" aria-label="Retour en haut">
       ↑
     </button>
 
@@ -543,7 +693,6 @@
         <p>© <span id="year"></span> — Yeleen</p>
       </div>
     </footer>
-
     <!-- Project Modal -->
     <div class="project-modal" id="projectModal" aria-hidden="true">
       <div class="project-modal__backdrop" data-close></div>
