--- a/it.html
+++ b/it.html
@@ -109,34 +109,6 @@
               </picture>
             </div>
           </aside>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -218,34 +190,6 @@
               </div>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -400,34 +344,6 @@
               </figure>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -539,34 +455,6 @@
               </div>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -590,34 +478,6 @@
               >Scarica (EN)</a
             >
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -659,40 +519,29 @@
             </div>
           </div>
 
-          <!-- FORM CONNECTED TO FORMSPREE -->
-
-          <!-- FORMSPREE WORKING FORM -->
+          <!--  FORM CONNECTED TO FORMSPREE 1-->
           <form
             class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
+            id="contactForm"
+            action="https://formspree.io/f/xykejxzd"
             method="POST"
           >
-            <input name="name" placeholder="Name" required />
-
+            <input name="name" placeholder="Nome" required />
             <input name="email" type="email" placeholder="Email" required />
-
             <textarea
               name="message"
               rows="5"
-              placeholder="Message"
+              placeholder="Messaggio"
               required
             ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
+            <button class="btn btn--full" type="submit">Invia</button>
+            <p class="form-msg" id="formMsg" aria-live="polite"></p>
           </form>
         </div>
       </section>
     </main>
 
-    <button class="to-top" id="toTop" type="button" aria-label="Retour en haut">
+    <button class="to-top" id="toTop" type="button" aria-label="Torna su">
       ↑
     </button>
 
