--- a/en.html
+++ b/en.html
@@ -108,34 +108,6 @@
               </picture>
             </div>
           </aside>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -215,34 +187,6 @@
               </div>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -392,34 +336,6 @@
               </figure>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -531,34 +447,6 @@
               </div>
             </div>
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -582,34 +470,6 @@
               >Download (EN)</a
             >
           </div>
-
-          <!-- FORMSPREE WORKING FORM -->
-          <form
-            class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
-            method="POST"
-          >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
-            <textarea
-              name="message"
-              rows="5"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <input
-              type="hidden"
-              name="_subject"
-              value="New message from portfolio"
-            />
-
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
-          </form>
         </div>
       </section>
 
@@ -651,18 +511,15 @@
             </div>
           </div>
 
-          <!-- FORM CONNECTED TO FORMSPREE -->
-
-          <!-- FORMSPREE WORKING FORM -->
+          <!--  FORM CONNECTED TO FORMSPREE 1-->
           <form
             class="form contact-form"
-            action="https://formspree.io/f/xykejqzd"
+            id="contactForm"
+            action="https://formspree.io/f/xykejxzd"
             method="POST"
           >
-            <input name="name" placeholder="Name" required />
-
-            <input name="email" type="email" placeholder="Email" required />
-
+            <input name="name" placeholder="Nom" required />
+            <input name="_replyto" type="email" placeholder="Email" required />
             <textarea
               name="message"
               rows="5"
@@ -673,12 +530,11 @@
             <input
               type="hidden"
               name="_subject"
-              value="New message from portfolio"
+              value="Message depuis le portfolio"
             />
 
-            <input type="hidden" name="_captcha" value="false" />
-
-            <button class="btn btn--full" type="submit">Send message</button>
+            <button class="btn btn--full" type="submit">Send</button>
+            <p class="form-msg" id="formMsg" aria-live="polite"></p>
           </form>
         </div>
       </section>
