--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             method="POST"
           >
             <input name="name" placeholder="Nom" required />
-            <input name="_replyto" type="email" placeholder="Email" required />
+            <input name="email" type="email" placeholder="Email" required />
             <textarea
               name="message"
               rows="5"
