--- a/en.html
+++ b/en.html
@@ -512,6 +512,7 @@
           </div>
 
           <!--  FORM CONNECTED TO FORMSPREE 2-->
+          <!--  FORM CONNECTED TO FORMSPREE 2-->
           <form
             class="form contact-form"
             id="contactForm"
@@ -531,6 +532,18 @@
               type="hidden"
               name="_subject"
               value="Message depuis le portfolio"
+            />
+            <input
+              type="text"
+              name="_gotcha"
+              style="display: none"
+              tabindex="-1"
+              autocomplete="off"
+            />
+            <input
+              type="hidden"
+              name="_redirect"
+              value="https://yeleena.github.io/Portfolio2026/#contact"
             />
 
             <button class="btn btn--full" type="submit">Send</button>
