--- a/index.html
+++ b/index.html
@@ -535,6 +535,18 @@
               name="_subject"
               value="Message depuis le portfolio"
             />
+            <input
+              type="text"
+              name="_gotcha"
+              style="display: none"
+              tabindex="-1"
+              autocomplete="off"
+            />
+            <input
+              type="hidden"
+              name="_redirect"
+              value="https://yeleena.github.io/Portfolio2026/#contact"
+            />
 
             <button class="btn btn--full" type="submit">Send</button>
             <p class="form-msg" id="formMsg" aria-live="polite"></p>
