--- a/it.html
+++ b/it.html
@@ -520,21 +520,41 @@
           </div>
 
           <!--  FORM CONNECTED TO FORMSPREE 2-->
+          <!--  FORM CONNECTED TO FORMSPREE 2-->
           <form
             class="form contact-form"
             id="contactForm"
             action="https://formspree.io/f/xykejxzd"
             method="POST"
           >
-            <input name="name" placeholder="Nome" required />
+            <input name="name" placeholder="Nom" required />
             <input name="email" type="email" placeholder="Email" required />
             <textarea
               name="message"
               rows="5"
-              placeholder="Messaggio"
+              placeholder="Message"
               required
             ></textarea>
-            <button class="btn btn--full" type="submit">Invia</button>
+
+            <input
+              type="hidden"
+              name="_subject"
+              value="Message depuis le portfolio"
+            />
+            <input
+              type="text"
+              name="_gotcha"
+              style="display: none"
+              tabindex="-1"
+              autocomplete="off"
+            />
+            <input
+              type="hidden"
+              name="_redirect"
+              value="https://yeleena.github.io/Portfolio2026/#contact"
+            />
+
+            <button class="btn btn--full" type="submit">Send</button>
             <p class="form-msg" id="formMsg" aria-live="polite"></p>
           </form>
         </div>
