Fix Formspree correct endpoint

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           <form
             class="form contact-form"
             id="contactForm"
-            action="https://formspree.io/f/xykejxzd"
+            action="https://formspree.io/f/xkejgzd"
             method="POST"
           >
             <input name="name" placeholder="Nom" required />
