--- a/it.html
+++ b/it.html
@@ -524,7 +524,7 @@
           <form
             class="form contact-form"
             id="contactForm"
-            action="https://formspree.io/f/xykejxzd"
+            action="https://formspree.io/f/xkejgzd"
             method="POST"
           >
             <input name="name" placeholder="Nom" required />
